--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\TABUL\\Anaconda3\\envs\\tensorflow\\python.exe"
+    "python.pythonPath": "C:\\Users\\adity\\Anaconda3\\envs\\tensorflow-gpu\\python.exe"
 }
